--- a/Views/Index.html
+++ b/Views/Index.html
@@ -7,11 +7,23 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/favicon.ico">
-
+    <link rel="icon" href="/Users/michaelangarola/Desktop/Personal Site/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/Users/michaelangarola/Desktop/Personal Site/site.css">
     <title>Michael Angarola</title>
   </head>
 <body>
+<div class="main">
+  <div class="header">
+    <span class="header-name">Michael Aidan Angarola</span>
+  </div>
+    
+  <h2><a href="https://drive.google.com/open?id=0B9bg68vL_BAjV3VEMjB0VzBlOVk">Resume</a></h2>
+  <h2>Portfolio:</h2>
+  <a href="healswift.azurewebsites.net"> <img src="/Users/michaelangarola/Desktop/Personal Site/Images/HealSwiftLogo.png"></a>
+  <h3>Freelance Work:</h3>
+  <a href="cristinaangarola.com"><img src="/Users/michaelangarola/Desktop/Personal Site/Images/cashowroomLogo.png"></a>
+ 
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 <script src="/Users/michaelangarola/Desktop/Personal Site/Scripts/vendor/angular-route.min.js"></script>
