--- a/Views/Index.html
+++ b/Views/Index.html
@@ -12,21 +12,45 @@
     <title>Michael Angarola</title>
   </head>
 <body>
-<div class="main">
+<div class="main" ng-controller="mainController">
   <div class="header">
     <span class="header-name">Michael Aidan Angarola</span>
   </div>
     
-  <h2><a href="https://drive.google.com/open?id=0B9bg68vL_BAjV3VEMjB0VzBlOVk">Resume</a></h2>
-  <h2>Portfolio:</h2>
+    {{message}}
+  <div class="header-links">
+    <a href="https://drive.google.com/open?id=0B9bg68vL_BAjV3VEMjB0VzBlOVk" id="resume">Resume</a>
+    <a href="#portfolio" id="portfolio">Portfolio</a>
+    <a href="#contact" id="contact">Contact</a>
+  </div>
+  <div ng-view></div>
+</div>
+
+<script type="text/ng-template" id="/templates/portfolio.html">
   <a href="healswift.azurewebsites.net"> <img src="/Users/michaelangarola/Desktop/Personal Site/Images/HealSwiftLogo.png"></a>
   <h3>Freelance Work:</h3>
   <a href="cristinaangarola.com"><img src="/Users/michaelangarola/Desktop/Personal Site/Images/cashowroomLogo.png"></a>
- 
-</div>
+</script>
+
+<script type="text/ng-template" id="/templates/contact.html">
+fdsfsd
+</script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 <script src="/Users/michaelangarola/Desktop/Personal Site/Scripts/vendor/angular-route.min.js"></script>
-<script src="/Users/michaelangarola/Desktop/Personal Site/Scripts/app.js"></script>
+<script type="text/javascript">
+  var app = angular.module("APP", ["ngRoute"]);
+    app.config(function($routeProvider) {
+    $routeProvider
+      .when("/", {
+          templateUrl : "main.html",
+          controller : 'mainController'})
+      .when("/Portfolio", {
+          templateUrl : "/templates/portfolio.html"})
+      });
+    app.controller('mainController', function($scope){
+      $scope.message = "hello world"
+    });
+</script>
 </body>
 </html>
