--- a/Views/Index.html
+++ b/Views/Index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link href="https://fonts.googleapis.com/css?family=Karla|Ubuntu+Condensed" rel="stylesheet">
     <link rel="icon" href="/Users/michaelangarola/Desktop/Personal Site/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/Users/michaelangarola/Desktop/Personal Site/site.css">
      <!--coded by hand, no bootstrap-->
