--- a/Views/Index.html
+++ b/Views/Index.html
@@ -31,16 +31,15 @@
 <div class="icon-bar"></div>
 <nav class="ng-cloak" ng-if="navHide">
   <ul>
-      <li><a href="https://drive.google.com/open?id=0B9bg68vL_BAjV3VEMjB0VzBlOVk">Resume</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <a href="https://drive.google.com/open?id=0B9bg68vL_BAjV3VEMjB0VzBlOVk"><li>Resume</li></a>
+      <a href="#portfolio"><li>Portfolio</li></a>
+      <a href="#contact"><li>Contact</li></a>
   </ul>
 </nav>
 </div>
 
-  <div ng-view></div>
+<div ng-view></div>
 </div>
-
 <script type="text/ng-template" id="/templates/portfolio.html">
 <div class="main-portfolio">
   <a href="healswift.azurewebsites.net"> <img src="/Users/michaelangarola/Desktop/Personal Site/Images/HealSwiftLogo.png"></a>
